--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <p class="absolute-left">Currently only available for Ames, Iowa</p>
     <!-- Title Section -->
     <div id="title-container" class="title-container">
         <h1>EquiHome</h1>
@@ -98,17 +99,26 @@
             <!-- Slide 6 -->
             <div class="slide">
                 <label for="yearRemodAdd">Remodel Year:</label>
-                <input type="number" id="yearRemodAdd" name="yearRemodAdd" min="1900" max="2025" required>
+                <input 
+                    type="number" 
+                    id="yearRemodAdd" 
+                    name="yearRemodAdd" 
+                    min="1900" 
+                    max="2025" 
+                    required
+                >
+                <span id="yearError" class="error-message"></span>
                 <button type="button" class="prev-btn">Previous</button>
                 <button type="button" class="next-btn">Next</button>
             </div>
 
             <!-- Final Slide (Result) -->
+            <!-- Final Slide (Result) -->
             <div class="slide">
                 <h2>Your House Estimated Price is:</h2>
                 <h1 id="final-value">$0</h1>
                 <button type="button" class="prev-btn">Previous</button>
-                <button type="calculate" id="Calculate-btn">Calculate</button>
+                <button type="submit" id="calculate-btn">Calculate</button>
             </div>
         </form>
     </div>
