--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ames, Iowa, House Value Estimator</title>
+    <title>Equihome</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
@@ -11,7 +11,7 @@
     <p class="absolute-left">Currently only available for Ames, Iowa</p>
     <!-- Title Section -->
     <div id="title-container" class="title-container">
-        <h1>EquiHome</h1>
+        <h1>Equihome</h1>
         <button id="start-btn" class="start-btn">Start</button>
     </div>
 
